--- a/templates/Superadmin/Superadmin_edit.html.twig
+++ b/templates/Superadmin/Superadmin_edit.html.twig
@@ -79,7 +79,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="info-item d-flex justify-content-center">
-        <a href="{{ path('app_Super_admin_publication') }}" style="color: #f96332;">Retour au list</a> <!-- Change text and color of the link -->
+        <a href="{{ path ('app_Super_admin_publication') }}" style="color: #f96332;">Retour au list</a> 
  </div>
         </div>
     </div>
