--- a/templates/Superadmin/Superadmin_publication.html.twig
+++ b/templates/Superadmin/Superadmin_publication.html.twig
@@ -51,7 +51,9 @@
 
     </div>
   </div>
-
+    <div class="col">
+        <a href="{{ path ('app_publication_Super_admin_new', {'idPP':publications[0].pageRelation.idP}) }}" class="btn" style="background-color: #f96332; border-radius: 30px; color: white; display: inline-block; margin-left : 1040px; width : 250px;">Créer une nouvelle publication</a>
+    </div>
     <div class="main-panel" id="main-panel" style="margin-left: 200px;">
         <nav class="navbar navbar-expand-lg navbar-transparent bg-primary navbar-absolute">
             <div class="container-fluid">
@@ -74,18 +76,22 @@
                     <div class="col-md-4 mb-4">
                         <div class="card" style="border-radius: 30px;">
                             <div class="card-body">
+                                <p class="card-text"><b>Nom Page : </b>{{ Superadmin.pageRelation.nom}}</p>
                                 <p class="card-text"><b>Nom : </b>{{ Superadmin.nomp }}</p>
                                 <p class="card-text" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><b>Description:</b> {{ Superadmin.description }}</p>
                                 <img src="{{ asset(Superadmin.image) }}" alt="Superadmin Image" class="card-img-top" width="" height="200" style="border-radius: 27px;"></br>
-                                <div class="d-flex justify-content-between align-items-center"></br></br></br>
-                                    <a href="{{path ('app_Super_admin_edit', {'id_p': Superadmin.id_p}) }}" class="btn btn-secondary" style="background-color: #f96332;; color: white; border-color: #f96332;; margin-right: 50px; margin-left: -10px; border-radius: 30px;">Modifier</a>
-                                    <form action="{{ path('app_Super_admin_delete', {'id_p': Superadmin.id_p}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?')" class="d-inline">
-                                        <input type="hidden" name="_method" value="DELETE">
-                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ Superadmin.id_p) }}">
-                                        <button type="submit" class="btn btn-secondary" style="background-color: #f96332;; color: white; border-color: #f96332;; margin-right: 90px; margin-left: -40px; border-radius: 30px;">Supprimer</button>
-                                    </form>
-                                    <a href="{{ path('app_Super_admin_show', {'id_p': Superadmin.id_p}) }}" class="btn btn-primary" style="background-color: #f96332;; color: white; border-color: #f96332;; border-radius: 30px; height:40px ; width:100px ; margin-right: -10px; margin-left: -60px;"> Plus</a>
-                                </div>
+                                <div class="d-flex justify-content-between align-items-center" style="margin-bottom: 20px;">
+    <form action="{{ path('app_Super_admin_delete', {'id_P': Superadmin.id_P}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?')" class="d-inline">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ Superadmin.id_P) }}">
+        <button type="submit" class="btn btn-secondary" style="background-color: #f96332; color: white; border-color: #f96332; border-radius: 30px;">Supprimer</button>
+    </form>
+
+    <a href="{{ path ('app_Super_admin_edit', {'id_P': Superadmin.id_P}) }}" class="btn btn-primary" style="background-color: #f96332; color: white; border-color: #f96332; border-radius: 30px; height: 40px; width: 100px;">Modifier</a>
+
+    <a href="{{ path ('app_Super_admin_show', {'id_P': Superadmin.id_P}) }}" class="btn btn-primary" style="background-color: #f96332; color: white; border-color: #f96332; border-radius: 30px; height: 40px; width: 100px;">Plus</a>
+</div>
+
                             </div>
                         </div>
                     </div>
