--- a/templates/Superadmin/Superadmin_show.html.twig
+++ b/templates/Superadmin/Superadmin_show.html.twig
@@ -64,6 +64,10 @@
                                 <table class="table mt-4">
                                     <tbody>
                                         <tr>
+                                            <th><b>Nom de la page</b></th>
+                                            <td>{{ publication.pageRelation.nom }}</td>
+                                        </tr>
+                                        <tr>
                                             <th><b>Nom</b></th>
                                             <td>{{ publication.nomp }}</td>
                                         </tr>
