--- a/templates/User/index_page.html.twig
+++ b/templates/User/index_page.html.twig
@@ -94,7 +94,7 @@
                                 <p><strong>Localisation:</strong> {{ page.localisation }}</p>
                                 <p class="truncate-text"><strong>Description:</strong> {{ page.description }}</p>
                                 <p><strong>Ouverture:</strong> {{ page.ouverture ? page.ouverture|date('H:i:s') : '' }}</p>
-                                <a href="{{ path ('app_page_show_user', {'idp': page.idp}) }}" class="btn btn-primary" style="background-color: #F99D45; color: white; border-color: #F99D45; border-radius: 30px; height:40px ; width:100px ; margin-right: -70px; margin-left: -3px;">Voir Plus</a>
+                                <a href="{{ path ('app_page_show_user', {'idP': page.idP}) }}" class="btn btn-primary" style="background-color: #F99D45; color: white; border-color: #F99D45; border-radius: 30px; height:40px ; width:100px ; margin-right: -70px; margin-left: -3px;">Voir Plus</a>
 
                             </div>
                         </div>
