--- a/templates/Admin/page_delete_form.html.twig
+++ b/templates/Admin/page_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_page_admin_delete', {'idp': page.idp}) }}" onsubmit="return confirm('Êtes-vous sûr de bien vouloir supprimer cet élément?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ page.idp) }}">
+<form method="post" action="{{ path('app_page_admin_delete', {'idP': page.idP}) }}" onsubmit="return confirm('Êtes-vous sûr de bien vouloir supprimer cet élément?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ page.idP) }}">
     <button class="btn">Supprimer</button>
 </form>
