--- a/templates/Admin/page_index.html.twig
+++ b/templates/Admin/page_index.html.twig
@@ -82,7 +82,7 @@
                                 <p><strong>Localisation:</strong> {{ page.localisation }}</p>
                                 <p class="truncate-text"><strong>Description:</strong> {{ page.description }}</p>
                                 <p><strong>Ouverture:</strong> {{ page.ouverture ? page.ouverture|date('H:i:s') : '' }}</p>
-                                <a href="{{ path ('app_page_admin_show', {'idp': page.idp}) }}" class="btn btn-primary" style="background-color: #F99D45; color: white; border-color: #F99D45; border-radius: 30px; height:40px ; width:100px ; margin-right: 100px; margin-left: 5px;">Voir Plus</a>
+                                <a href="{{ path ('app_page_admin_show', {'idP': page.idP}) }}" class="btn btn-primary" style="background-color: #F99D45; color: white; border-color: #F99D45; border-radius: 30px; height:40px ; width:100px ; margin-right: 100px; margin-left: 5px;">Voir Plus</a>
 
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                     <div class="swiper-slide">
                         <div class="testimonial-wrap">
                             <div class="testimonial-item">
-                                <h3>No Testimonials Available</h3>
+                                <h3> Aucun témoignage disponible</h3>
                             </div>
                         </div>
                     </div><!-- End testimonial item -->
@@ -105,7 +105,7 @@
 
     </section><!-- /Testimonials Section -->
 
-    <a href="{{ path ('app_page_admin_new', {'idu':pages[0].userRelation.idu}) }}" class="btn" style="background-color: #f99d26; border-radius: 30px; color: white; display: inline-block;">Créer une nouvelle page</a>
+    <a href="{{ path ('app_page_admin_new', {'idU':pages[0].userRelation.idu}) }}" class="btn" style="background-color: #f99d26; border-radius: 30px; color: white; display: inline-block;">Créer une nouvelle page</a>
 </main>
 
 <style>
