--- a/templates/Admin/page_new.html.twig
+++ b/templates/Admin/page_new.html.twig
@@ -7,7 +7,7 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
 {% if page.userRelation is not null %}
-    <a href="{{ path('app_page_admin_new', {'idu': page.userRelation.idu}) }}" class="logo d-flex align-items-center me-auto">
+    <a href="{{ path('app_page_admin_new', {'idU': page.userRelation.idu}) }}" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="{{ asset ('assets/img/4.png') }}" alt="" width="70" height="300">
         <h1 class="">CityVibe</h1>
@@ -21,7 +21,7 @@
             <a href="#" class="active"><span>Lieu</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
 {% if page.userRelation is not null %}
-    <li><a href="{{ path('app_page_admin_new', {'idu': page.userRelation.idu}) }}">Pages</a></li>
+    <li><a href="{{ path('app_page_admin_new', {'idU': page.userRelation.idu}) }}">Pages</a></li>
 {% else %}
     <!-- Handle the case when page.userRelation is null -->
     <!-- You can provide a default value or display a message -->
