--- a/templates/Admin/pub_delete_form.html.twig
+++ b/templates/Admin/pub_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_publication_delete', {'id_p': publication.id_p}) }}" onsubmit="return confirm('Êtes-vous sûr de bien vouloir supprimer cet élément?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ publication.id_p) }}">
+<form method="post" action="{{ path('app_publication_delete', {'id_P': publication.id_P}) }}" onsubmit="return confirm('Êtes-vous sûr de bien vouloir supprimer cet élément?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ publication.id_P) }}">
     <button class="btn">Supprimer</button>
 </form>
