--- a/templates/Superadmin/Superadmin_page.html.twig
+++ b/templates/Superadmin/Superadmin_page.html.twig
@@ -59,6 +59,10 @@
   </div>
   </header>
 
+    <div class="col">
+        <a href="{{ path ('app_page_Super_admin_new', {'idU':pages[0].userRelation.idu}) }}" class="btn" style="background-color: #f96332; border-radius: 30px; color: white; display: inline-block; margin-left : 1100px">Créer une nouvelle page</a>
+    </div>
+
 <div class="main-panel d-flex justify-content-center" id="main-panel" style="width: 1139px;">
     <main class="main">
         <section id="testimonials" class="testimonials section">
@@ -67,8 +71,9 @@
                     <span style="border-bottom: 3px solid orange; padding-bottom: 5px;"> &nbsp; &nbsp;Bienvenue a nos pages &nbsp; &nbsp;   </span>
                 </p>
             </div>
-            <div>
+            <div> 
 </div>
+
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <div class="swiper">
                     <div class="swiper-wrapper">
@@ -86,15 +91,23 @@
                                         <p class="card-text"><strong>Localisation:</strong> {{ Superadmin.localisation }}</p>
                                         <p class="card-text"><strong>Description:</strong> {{ Superadmin.description }}</p>
                                         <p class="card-text"><strong>Ouverture:</strong> {{ Superadmin.ouverture ? Superadmin.ouverture|date('H:i:s') : '' }}</p>
-                                    <div class="d-flex justify-content-between align-items-center"></br></br></br>
-                                    <a href="{{path ('app_Super_admin_edit_page', {'idp': Superadmin.idp}) }}" class="btn btn-secondary" style="background-color: #f96332;; color: white; border-color: #f96332;; margin-right: 50px; margin-left: -10px; border-radius: 30px;">Modifier</a>
-                                    <form action="{{ path('app_Super_admin_delete_page', {'idp': Superadmin.idp}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?')" class="d-inline">
-                                        <input type="hidden" name="_method" value="DELETE">
-                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ Superadmin.idp) }}">
-                                        <button type="submit" class="btn btn-secondary" style="background-color: #f96332;; color: white; border-color: #f96332;; margin-right: 90px; margin-left: -40px; border-radius: 30px;">Supprimer</button>
-                                    </form>
-                                    <a href="{{ path('app_Super_admin_show_page', {'idp': Superadmin.idp}) }}" class="btn btn-primary" style="background-color: #f96332;; color: white; border-color: #f96332;; border-radius: 30px; height:40px ; width:100px ; margin-right: -10px; margin-left: -60px;"> Plus</a>
-                                </div>
+                                  <div class="row justify-content-between align-items-center">
+    <div class="col">
+        <form action="{{ path('app_Super_admin_delete_page', {'idP': Superadmin.idP}) }}" method="post" onsubmit="return confirm('Are you sure?')" class="d-inline">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ Superadmin.idP) }}">
+            <button type="submit" class="btn btn-secondary" style="background-color: #f96332; color: white; border-color: #f96332; border-radius: 30px;">Supprimer</button>
+        </form>
+    </div>
+    <div class="col">
+        <a href="{{ path ('app_Super_admin_edit_page', {'idP': Superadmin.idP}) }}" class="btn btn-primary" style="background-color: #f96332; color: white; border-color: #f96332; border-radius: 30px; height: 40px; width: 100px;">Modifier</a>
+    </div>
+    <div class="col">
+        <a href="{{ path ('app_Super_admin_show_page', {'idP': Superadmin.idP}) }}" class="btn btn-primary" style="background-color: #f96332; color: white; border-color: #f96332; border-radius: 30px; height: 40px; width: 100px;">Plus</a>
+    </div>
+
+</div>
+
                                     </div>
                                 </div>
                             </div>
@@ -103,7 +116,7 @@
                         <div class="swiper-slide">
                             <div class="testimonial-wrap">
                                 <div class="testimonial-item">
-                                    <h3>No Testimonials Available</h3>
+                                    <h3>Aucun témoignage disponible</h3>
                                 </div>
                             </div>
                         </div>
