--- a/templates/Superadmin/Superadmin_page_form.html.twig
+++ b/templates/Superadmin/Superadmin_page_form.html.twig
@@ -65,7 +65,7 @@
 
 <div class="form-group-left" style="margin-bottom: 10px;">
     <div class="flex-container-left">
-        <button type="submit" class="btn">{{ button_label|default('Enregistrer') }}</button>
+        <button type="submit" class="btn btn-orange" >{{ button_label|default('Enregistrer') }}</button>
     </div>
 </div>
 {{ form_end(form) }}
