--- a/templates/User/show_user.html.twig
+++ b/templates/User/show_user.html.twig
@@ -7,7 +7,7 @@
 <header id="header" class="header d-flex align-items-center sticky-top">
   <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-    <a href="{{ path ('app_page_index_user', {'idp': page.idp}) }}" class="logo d-flex align-items-center me-auto">
+    <a href="{{ path ('app_page_index_user', {'idP': page.idP}) }}" class="logo d-flex align-items-center me-auto">
       <!-- Uncomment the line below if you also wish to use an image logo -->
 <img src="{{asset('assets/img/4.png')}}" alt="" width="70" height="300">
 
